--- a/Inlamningsuppgift_2_Sam_Jabbar.ipynb
+++ b/Inlamningsuppgift_2_Sam_Jabbar.ipynb
@@ -291,7 +291,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assults = pd.read_csv('assults.csv')"
+    "assults = pd.read_csv('assults.csv')\n",
+    "\n"
    ]
   },
   {
